	check_ntp_peer has now specific state output for each metric
	New check_mysql -n option to ignore authentication failures
	Added IP and port or socket name to error messages
	New check_ntp_time -o option to add expected offset
	check_disk shows now troubled partions in verbose mode
	check_dig has now support for drill and dig
	check_dig has now support for -6 option

	FIXES
	Fix check_jabber to work with Openfire servers
	Fix check_oracle bad string matching when testing TNS server
	Fixed check_ifstatus performance data output
        Fixed expire time output for sslutils
	check_dns now verifies if the answer is returning from the queried
	  server
	Fix check_by_ssh to accept --hostname as argument

2.0 11th July 2014
	ENHANCEMENTS
	check_mailq now supports auto detection of qmail, postfix, exim and nullmailer with
	  fallback to sendmail
	check_ide_smart now defaults to plugin output, original output appended with -v
	Extra-Opts are now enabled by default, see:
	  https://www.monitoring-plugins.org/doc/extra-opts.html
	check_swap now supports a configurable state when there is no swap
	check_radius now supports the FreeRADIUS Client library
	New check_mysql_query -f option to specify a client options file
	New check_mysql_query -g option to specify a client options group
	Add performance data to check_mysql_query
	New check_file_age -i/--ignore-missing option to return OK on nonexistent files
	Make check_ping, check_users, and check_disk work on Windows
	New check_ssh -P option to specify the expected SSH protocol version
	check_dns now emits the warning and critical thresholds with the performance data

	FIXES
	Don't let e.g. check_http's -C option reset SSL version if e.g. -S 1 -C 5 is specified
	Don't have check_http's -N option expect an argument
	check_ide_smart could disable offline auto tests but could not re-enable them.
	  For this reason all SMART command modes have been disabled.
	check_dig: fix wrong IPv6 arguments order (Stéphane Bortzmeyer)